<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">TCubed</string>

    // ThemesMenu

    <string name="ThemesMenu.textView.themes">Customize</string>
    <string name="ThemesMenu.button.presets">Themes</string>
    <string name="ThemesMenu.button.backgrounds">Backgrounds</string>
    <string name="ThemesMenu.button.icons">Icons</string>

    // MainActivity

    <string name="MainActivity.button.play">Play</string>
    <string name="MainActivity.button.customize">Customize</string>
    <string name="MainActivity.button.directions">Directions</string>
    <string name="MainActivity.button.credits">Credits</string>
    <string name="MainActivity.image.logo.description">A picture of a T with a 3 in its trunk</string>
    <string name="MainActivity.imageButton.cog.description">Simple 2D depiction of a cog or gear</string>
    <string name="MainActivity.MAIN_MENU_POPUP.volume">Volume</string>
    <string name="MainActivity.MAIN_MENU_POPUP.on">On</string>
    <string name="MainActivity.MAIN_MENU_POPUP.off">Off</string>

    // DirectionsMenu

    <string name="DirectionsMenu.title">Directions</string>
    <string name="DirectionsMenu.description"> <b>This is a simple tic-tac-toe game.</b> \n\nGet three of your icons in a row to win!
        \n\nWhen playing a <u>Player vs Computer</u> game the user will always get to play first and see who will win in a battle of wits!
        \n\nWhen playing a <u>Player vs Player</u> game the users which each take their turn placing down one of their pieces with the goal of trying to get three in a row while also stopping your opponent from doing the same!</string>
    <string name="DirectionsMenu.directions">Directions</string>

    // Activity_Play_Menu

    <string name="PlayMenu.contentDesc.x_player_name">X Player Name</string>
    <string name="PlayMenu.contentDesc.o_player_name">O Player Name</string>

    // Activity_Game_Board

    <string name="Activity_Game_Board.scoreboard">Score</string>

    // Activity_Play_Menu

    <string name="Activity_Play_Menu.settings">Settings</string>
    <string name="Activity_Play_Menu.pvc"> Player vs. Computer</string>
    <string name="Activity_Play_Menu.x_first">X First</string>
    <string name="Activity_Play_Menu.pvp">Player vs.\nPlayer</string>
    <string name="Activity_Play_Menu.0_first">O First</string>
    <string name="Activity_Play_Menu.set_names">Set Names</string>
    <string name="Activity_Play_Menu.x_player">X Player</string>
    <string name="Activity_Play_Menu.name">Name</string>
    <string name="Activity_Play_Menu.o_player">O Player</string>
    <string name="Activity_Play_Menu.play">Play</string>

    // BackgroundsList

    <string name="BackgroundsList.backgrounds">Backgrounds</string>
    <string name="BackgroundsList.example">Example Background</string>

    // IconsList

    <string name="IconsList.icons">Icons</string>
    <string name="IconsList.example">Example Icon</string>

    // ThemesList

    <string name="ThemesList.themes">Themes</string>
    <string name="ThemesList.example">Example Theme</string>

    // Credits

    <string name="Credits.credits">Credits</string>

    // Misc.

    <string name="Misc.placeholder">[Placeholder Text]</string>
    <string name="Misc.UpNavArrow.contentDesc">Small arrow to go up to previous menu</string>
    <string name="Misc.shortPlacehold">PH</string>

    //Preferences
    <string-array name="Themes">
        <item></item>
    </string-array>

    <string-array name="icons_save">
        <item>
            <string-array name="default">
                <item></item>
                <item></item>
            </string-array>
        </item>
        <item>
            <string-array name="bakery">
                <item>crossed_donuts</item>
                <item>donut</item>
            </string-array>
        </item>
        <item>
            <string-array name="halloween">
                <item>candy_icon</item>
                <item>pumpkin_icon</item>
            </string-array>
        </item>
        <item>
            <string-array name="christmas">
                <item>crossed_candy_canes</item>
                <item>wreath</item>
            </string-array>
        </item>
        <item>
            <string-array name="galaxy">
                <item>star_icon</item>
                <item>circle_icon</item>
            </string-array>
        </item>
    </string-array>

    <string-array name="icons_names">
        <item>Bakery</item>
        <item>Halloween</item>
        <item>Christmas</item>
        <item>Galaxy</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="programmer_1_zachary_leonard">Programmer 1: <u>Zachary Leonard</u> </string>
    <string name="programmer_2_jillian_mcdaniel">Programmer 2: <u>Jillian McDaniel</u></string>
    <string name="lord_and_saviour_god">Lord and Saviour: <u>God</u></string>
    <string name="everyone_who_did_testing_for_us">Special Thanks to Everyone who did testing for us</string>
    <string name="programmer_3_peter_young">Programmer 3: <u>Peter Young</u></string>
    <string name="teacher_doctor_lew">Teacher: <u>Doctor Lew</u></string>

</resources>
