<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Credits"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="80dp"
        android:background="@color/Frame"
        android:fontFamily="sans-serif"
        android:text="@string/Credits.credits"
        android:textAlignment="center"
        android:textSize="48sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:background="@color/Background"
        android:contentDescription="@string/Misc.UpNavArrow.contentDesc"
        android:onClick="back"
        android:scaleType="fitXY"
        android:tint="@color/Buttons"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="167dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/programmer_1_zachary_leonard"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/programmer_2_jillian_mcdaniel"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/programmer_3_peter_young"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/teacher_doctor_lew"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/lord_and_saviour_god"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/everyone_who_did_testing_for_us"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>